...
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp">

                <!-- INPUT -->
                <EditText
                    android:id="@+id/regFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/username_icon"
                    android:layout_marginBottom="-8dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
...
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp">

                <!-- INPUT -->
                <EditText
                    android:id="@+id/regLastName"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/username_icon2"
                    android:layout_toEndOf="@+id/username_icon2"
                    android:layout_alignBottom="@+id/username_icon2"
                    android:layout_width="match_parent"
...
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp">

                <!-- INPUT -->
                <EditText
                    android:id="@+id/regEmail"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/email_icon"
                    android:layout_toEndOf="@+id/email_icon"
                    android:layout_alignBottom="@+id/email_icon"
                    android:layout_width="match_parent"
...
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp">

                <!-- INPUT -->
                <EditText
                    android:id="@+id/regPassword"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/password_icon"
                    android:layout_toEndOf="@+id/password_icon"
                    android:layout_alignBottom="@+id/password_icon"
                    android:layout_width="match_parent"
...
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp">

                <!-- INPUT -->
                <EditText
                    android:id="@+id/regRePassword"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/password_icon2"
                    android:layout_toEndOf="@+id/password_icon2"
                    android:layout_alignBottom="@+id/password_icon2"
                    android:layout_width="match_parent"
...
                android:layout_marginLeft="55dp">

            </LinearLayout>


            <Button
                android:id="@+id/regBtn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:background="@drawable/button"
...
