...
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register.</string>
    <string name="action_sign_in_short">Sign in.</string>
    <string name="error_invalid_email">This email address is invalid.</string>
    <string name="error_invalid_password">This password is too short.</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_password_not_match">Password does not match.</string>

    <!-- TODO: Remove or change this placeholder text -->
...
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="invalid_email_format">Invalid email address format.</string>
    <string name="password_too_short">Password is too short.  Minimum length is </string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
...
